@@ -3,6 +3,7 @@ Revision history for Perl extension FSA::Rules.
 0.11
       - Modified Synopsis to show off the result() method.
       - Other minor documentation fixes spotted by Curtis Poe.
+      - Added graph support.  Implementation by Curtis Poe.
 
 0.10  2004-12-17T23:29:54
       - Moved state-specific methods to new FSA::State class. This is a
